Thu Feb  8 15:43:05 2007  Koichi Sasada  <ko1@atdot.net>

	* process.c: fix to use rb_status_line_set/get/clear().

	* eval_intern.h: fix line break.

Thu Feb  8 15:00:14 2007  Koichi Sasada  <ko1@atdot.net>

	* blockinlining.c, error.c, eval.c, eval_error.h, eval_intern.h,
	  eval_jump.h, eval_load.c, eval_safe.h, gc.c, proc.c, signal.c,
	  thread.c, thread_pthread.ci, thread_win32.ci, vm.c, vm.h,
	  vm_dump.c, vm_evalbody.ci, yarvcore.c, yarvcore.h:
	  fix typo (rb_thead_t -> rb_thread_t).

	* eval_intern.h: remove unused definitions.

	* common.mk: fix around vm_opts.h path
	  and remove harmful argument passed to insns2vm.rb.

Thu Feb  8 03:11:47 2007  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* lib/cgi.rb (CGI::unescapeHTML): invalid decoding for single
	  unescaped ampersand.  a patch from Tietew
	  <tietew+ruby-dev at tietew.net> in [ruby-dev:30292].
	  fixed: [ruby-dev:30289]

Wed Feb  7 23:25:31 2007  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* eval.c (specific_eval): suppress warning.

	* thread_win32.h: undefine _WIN32 on cygwin.  [ruby-dev:30303]

Wed Feb  7 22:41:34 2007  Koichi Sasada  <ko1@atdot.net>

	* eval_intern.h: remove UNSUPPORTED() macro.

	* thread.c: fix to define Continuation methods
	  (they only do rb_notimplement()).

Wed Feb  7 22:33:58 2007  Koichi Sasada  <ko1@atdot.net>

	* eval_intern.h, yarvcore.h: remove unused macro definition.

Wed Feb  7 22:30:28 2007  Koichi Sasada  <ko1@atdot.net>

	* eval.c: fixed to use ANSI function style.

Wed Feb  7 09:35:32 2007  Koichi Sasada  <ko1@atdot.net>

	* this commit is a result of refactoring. only renaming functions,
	  moving definitions place, add/remove prototypes, deleting
	  unused variables and removing yarv.h.
	  This commit doesn't change any behavior of ruby/vm.

	* yarv.h, common.mk: remove yarv.h (contents are moved to yarvcore.h).

	* error.c, eval_intern.h: include yarvcore.h instead yarv.h

	* rename some functions:
	  * debug.[ch]: debug_*() -> ruby_debug_*()